优化：批量导入学生信息时，重复信息的提示结果